sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:6: error: identifier expected but integer literal found.
	if (L[i] > L[i-1]) {
                       ^AlgGnomeSort:15: error: ']' expected but '}' found.
}
^