sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code

def gnomeSort() {
var i: Int= 1
while (i< getNombresValeurs() ) {
	if (L[i] > L[i-1]) {
		i = i+1
	} 
	else {
		echange (L[i],L[i-1])
		if (i>1) {
			i=i-1
		}
	}
}
}
